editor with viewport

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
   "unpkg": "dist/kaier-writer/kaier-writer.js",
-  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "repository": {
     "type": "git",
     "url": "git+ssh://git@github.com:bipoza/kaier-writer.git"
@@ -19,7 +21,6 @@
     "dist/",
     "loader/"
   ],
-
   "scripts": {
     "build": "stencil build --docs",
     "start": "stencil build --dev --watch --serve",
